--- a/public/pages/adminpage.html
+++ b/public/pages/adminpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
+    <title>Profile</title>
 </head>
 <body>
     <div class="main">
@@ -16,17 +16,22 @@
                     <a href="/home">Home</a>
                 </div>
                 <div>
-                    <a href="/news">News</a>
+                    <a href="/articles">Articles</a>
                 </div>
             </div>
             <div class="user">
                 <a href="/login">Login</a>
             </div>
         </div>
-        <div>
-            <h1>Admin</h1>
+        <div class="content">
+            <h1>Profile</h1>
+            <div class="userInfo">
+
+            </div>
+            <button id="logoutButton">Logout</button>
         </div>
     </div>
 </body>
 <script src="/javascript/commonScript.js"></script>
+<script src="/javascript/profileScript.js"></script>
 </html>
