--- a/public/pages/articlespage.html
+++ b/public/pages/articlespage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
+    <title>Articles</title>
 </head>
 <body>
     <div class="main">
@@ -16,7 +16,7 @@
                     <a href="/home">Home</a>
                 </div>
                 <div>
-                    <a href="/news">News</a>
+                    <a href="/articles">Articles</a>
                 </div>
             </div>
             <div class="user">
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div>
-            <h1>News</h1>
+            <h1>Articles</h1>
         </div>
     </div>
 </body>
