--- a/public/pages/profilepage.html
+++ b/public/pages/profilepage.html
@@ -16,7 +16,7 @@
                     <a href="/home">Home</a>
                 </div>
                 <div>
-                    <a href="/news">News</a>
+                    <a href="/articles">Articles</a>
                 </div>
             </div>
             <div class="user">
@@ -29,6 +29,13 @@
 
             </div>
             <button id="logoutButton">Logout</button>
+        </div>
+        <div>
+            <h1>Saved Articles</h1>
+            <div class="savedArticles">
+
+
+            </div>
         </div>
     </div>
 </body>
