--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -16,7 +16,7 @@
                     <a href="/home">Home</a>
                 </div>
                 <div>
-                    <a href="/news">News</a>
+                    <a href="/articles">Articles</a>
                 </div>
             </div>
             <div class="user"></div>
