--- a/public/pages/loginpage.html
+++ b/public/pages/loginpage.html
@@ -16,7 +16,7 @@
                     <a href="/home">Home</a>
                 </div>
                 <div>
-                    <a href="/news">News</a>
+                    <a href="/Articles">Articles</a>
                 </div>
             </div>
             <div class="user">
