--- a/public/pages/profilepage.html
+++ b/public/pages/profilepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+    <link rel="stylesheet" href="/style/css/style.css">
 </head>
 <body>
     <div class="main">
@@ -18,23 +19,21 @@
                 <div>
                     <a href="/articles">Articles</a>
                 </div>
-            </div>
-            <div class="user">
-                <a href="/login">Login</a>
+                <div class="user">
+                    <a href="/login">Login</a>
+                </div>
             </div>
         </div>
-        <div class="content">
-            <h1>Profile</h1>
-            <div class="userInfo">
-
+        <div class="profilePage">
+            <div class="userDetails">
+                <h1>Profile</h1>
+                <div class="userInfo"></div>
+                <button id="logoutButton">Logout</button>
             </div>
-            <button id="logoutButton">Logout</button>
-        </div>
-        <div>
-            <h1>Saved Articles</h1>
-            <div class="savedArticles">
-
-
+            <div class="articals">
+                <h1>Saved Articles</h1>
+                <div class="savedArticles">
+                </div>
             </div>
         </div>
     </div>
