--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="/style/css/style.css">
 </head>
 <body>
     <div class="main">
@@ -18,8 +19,10 @@
                 <div>
                     <a href="/articles">Articles</a>
                 </div>
+                <div class="user">
+                    <a href="/login">Login</a>
+                </div>
             </div>
-            <div class="user"></div>
         </div>
         <div>
             <h1>Home</h1>
