--- a/public/pages/articlespage.html
+++ b/public/pages/articlespage.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div class="articalPage">
+        <div class="articlePage">
             <h1>Articles</h1>
             <div>
                 <div class="button"></div>
@@ -40,5 +40,5 @@
     </div>
 </body>
 <script src="/javascript/commonScript.js"></script>
-<script src="/javascript/articlesScript.js"></script>
+<script src="/javascript/articlesDisplay.js"></script>
 </html>
