--- a/public/pages/editCreateArticlepage.html
+++ b/public/pages/editCreateArticlepage.html
@@ -39,7 +39,7 @@
                         </div>
                         <div>
                             <label for="content">Content</label>
-                            <textarea id="content" placeholder="The main content of your artical, can use html and css to style or add images..."></textarea>
+                            <textarea id="content" placeholder="The main content of your article, can use html and css to style or add images..."></textarea>
                         </div>
                         <button type="submit">Create</button>
                     </form>
