--- a/public/pages/loginpage.html
+++ b/public/pages/loginpage.html
@@ -78,6 +78,6 @@
         </div>
     </div>
 </body>
-<script src="/javascript/loginScript.js"></script>
+<script src="/javascript/login.js"></script>
 <script src="/javascript/commonScript.js"></script>
 </html>
