--- a/public/pages/profilepage.html
+++ b/public/pages/profilepage.html
@@ -30,14 +30,21 @@
                 <div class="userInfo"></div>
                 <button id="logoutButton">Logout</button>
             </div>
-            <div class="articals">
+            <div>
                 <h1>Saved Articles</h1>
-                <div class="savedArticles">
-                </div>
+                <table id="articalTable">
+                    <tr>
+                      <th>Title</th>
+                      <th>Created By</th>
+                      <th>Created At </th>
+                      <th>Link</th>
+                      <th>Unfavorite</th>
+                    </tr>
+                  </table>
             </div>
         </div>
     </div>
 </body>
 <script src="/javascript/commonScript.js"></script>
-<script src="/javascript/profileScript.js"></script>
+<script src="/javascript/profile.js"></script>
 </html>
