--- a/public/pages/readArticlepage.html
+++ b/public/pages/readArticlepage.html
@@ -24,8 +24,11 @@
                 </div>
             </div>
         </div>
+        <div class="articelsReadPage">
+            <div class="articles"></div>
+        </div>
     </div>
 </body>
 <script src="/javascript/commonScript.js"></script>
-<script src="/javascript/articalsRead.js"></script>
+<script src="/javascript/articlesRead.js"></script>
 </html>
