--- a/public/pages/adminpage.html
+++ b/public/pages/adminpage.html
@@ -31,9 +31,15 @@
             </div>
             <div>
                 <h1>Saved Articles</h1>
-                <div class="savedArticles">
-    
-                </div>
+                <table id="articalTable">
+                    <tr>
+                      <th>Title</th>
+                      <th>Created By</th>
+                      <th>Created At </th>
+                      <th>Link</th>
+                      <th>Unfavorite</th>
+                    </tr>
+                  </table>
             </div>
             <div>
                 <h1>Brukere</h1>
@@ -51,5 +57,5 @@
     </div>
 </body>
 <script src="/javascript/commonScript.js"></script>
-<script src="/javascript/profileScript.js"></script>
+<script src="/javascript/profile.js"></script>
 </html>
