--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="homePage">
             <h1>Home</h1>
         </div>
     </div>
